added lightbox for login

--- a/app/assets/javascripts/feedfiction.js.erb
+++ b/app/assets/javascripts/feedfiction.js.erb
@@ -159,6 +159,9 @@ var feedfiction = {
               }
           });
       },
+      validateLike: function(){
+        feedfiction.validateLogin.call(this,'You must sign in to like a story');
+      },
 
       boldWriterLine: function(){
           var className = $(this).attr('class');
@@ -371,68 +374,14 @@ var feedfiction = {
         var args = Array.prototype.slice.call(arguments, 1);
         if (feedfiction.actions[type] != null) feedfiction.actions[type].apply(this, args);
     },
-    /*
-    *   validateField - generic field validation function
-    */
-     validateField: function () {
-        var success = true, message = '', el = $(this);
-        el.removeClass('input-error');
-        if (el.siblings('.error')) {
-            el.siblings('.error').html('');
-        }
-        if (el.val() == '' || this.nodeName != null && this.nodeName.toLowerCase() == 'select' && el.val() == '0') {
-            if (el.hasClass('required')) {
-                success = false;
-                message = feedfiction.constants.messages.required;
-            }
-        } else {
-            if (el.hasClass('validate-match') && el.val() != $('#' + el.attr('data-matchInput')).val()) {
-                success = false;
-                message = feedfiction.constants.messages.mustMatch.replace('%FIELD%', el.attr('data-matchName'));
-            } else if (el.hasClass('alphaNumFix') && !(/^[א-תa-zA-Z0-9_]+$/).test(el.val())) {
-                success = false;
-                message = feedfiction.constants.messages.alphaHebNumFix;
-            } else if (el.hasClass('validate-date') && isNaN(Date.parse(el.val()))) {
-                success = false;
-                message = feedfiction.constants.messages.dateInvalid;
-            } else if (el.hasClass('alphaHeb') && !(/^[א-תa-zA-Z]+$/).test(el.val())) {
-                success = false;
-                message = feedfiction.constants.messages.alphaHebFix;
-            } else if (el.hasClass('validate-email') && !(/^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}$/i).test(el.val())) {
-                success = false;
-                message = feedfiction.constants.messages.emailInvalid;
-            } else if (el.hasClass('validate-required-check') && !this.checked) {
-                success = false;
-                message = feedfiction.constants.messages.required;
-            } else if (!isNaN(el.attr('data-minLength')) && parseInt(el.attr('data-minLength')) > el.val().length) {
-                success = false;
-                message = feedfiction.constants.messages.minLength.replace('%NUM%', el.attr('data-minLength'));
-            } else if (!isNaN(el.attr('data-maxLength')) && parseInt(el.attr('data-maxLength')) < el.val().length) {
-                success = false;
-                message = feedfiction.constants.messages.maxLength.replace('%NUM%', el.attr('data-maxLength'));
-            }
-        }
-        if (!success) {
-            el.focus();
-            el.addClass('input-error');
-            if (el.siblings('.error-message').length > 0) {
-                el.siblings('.error-message').html(message);
-            }
-            else feedfiction.actions.displayMessage(message, "Error!");
-        } else {
-            if (el.siblings('.error-message')) {
-                el.siblings('.error-message').html('');
-            }
-        }
-
-        return success;
-    },
+    
 
     validateLogin: function(message){
         var success = true;
         if ($(this).attr('unlogged') && $(this).attr('unlogged').length>0){
           success = false;
-          alert(message);
+          $('#modal-register').modal('show');
+          //alert(message);
           $(this).blur();
         }
         return success;
