--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -42,7 +42,7 @@
 					<div><!-- Create, Inspire, Share. --></div> 
 			 		<div>Have fun. <span class="last-word">Together</span>.</div>
 			 	</p>
-			 	<span class="sign-in"></span>
+			 	<span class="sign-in btn-signin-large"></span>
 		 	</div>
 			
 			<div class="story-panel">
