--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,35 +34,13 @@
       <div id="like-modal" class="modal hide fade in"></div>
       
     <%else%>
-      <div id="loginPreloader" class="modal hide fade">
-        <div class="modal-body">
-          <p>Logging you in…</p>
-        </div>
-      </div>
-
+      <%= render 'layouts/unregisterd_modals' %>
+      
     <%end%>
     <%= yield :footer %>
   </div>
     <%= debug(params) if Rails.env.development? %>
-    <script type="text/javascript">
-      var uvOptions = {};
-      (function() {
-        var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
-        uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/gyrGqJSiwvglNUFEvhh3uQ.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
-      })();
-
-       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-37039143-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
+    <%= render 'layouts/analytics' %>
 
   </body>
 </html>
