--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -4,7 +4,7 @@
     <strong id="following" class="stat">
       <%= @user.followed_users.count %>
     </strong>
-    following
+    Following
   </a>
 </li>
 <li <%=@active_followers%>>
@@ -12,6 +12,6 @@
     <strong id="followers" class="stat">
       <%= @user.followers.count %>
     </strong>
-    followers
+    Followers
   </a>
 </li>
