--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,7 +1,10 @@
-<% unless current_user?(@user) %>
+<% if current_user?(@user) %>
+
+		<%= link_to "That's you", '#', class: "btn btn-small thats-you disabled" %>
+<%else%>
   <% if current_user.following?(@user) %>
     <%= render 'users/unfollow' %>
   <% else %>
     <%= render 'users/follow' %>
   <% end %>
- <% end %>
+<% end %>
