--- a/app/assets/javascripts/feedfiction.js.erb
+++ b/app/assets/javascripts/feedfiction.js.erb
@@ -164,21 +164,41 @@ var feedfiction = {
       },
 
       boldWriterLine: function(){
-          var className = $(this).attr('class');
-          var elements = $(this).closest('.story-with-owners').find('.'+className);
-
-          $(elements).bind({
-            mouseenter: function() {
+          
+          $('.story-with-owners .hover-line').live('mouseenter mouseleave', function(event){
+             var className = $(this).attr('class').replace('hover-line','').replace('owner','').trim();
+             var elements = $(this).closest('.story-with-owners').find('.'+className);
+             if (event.type=='mouseenter'){
               $(elements).css('color','#29A9DF');
               $(elements).last().find('.round-avatar').addClass('round-avatar-border');
-            },
-            mouseleave: function() {
+            }
+            else{
               $(elements).css('color','#444');
               $(elements).last().find('.round-avatar').removeClass('round-avatar-border');
-              
-               
             }
           });
+          
+          // $(elements).mouseenter(function(){
+          //     $(elements).css('color','#29A9DF');
+          //     $(elements).last().find('.round-avatar').addClass('round-avatar-border');
+          //   });
+          // $(elements).mouseleave(function(){
+          //     $(elements).css('color','#444');
+          //     $(elements).last().find('.round-avatar').removeClass('round-avatar-border');
+          //  });
+          
+          // $(elements).bind({
+          //   mouseenter: function() {
+          //     $(elements).css('color','#29A9DF');
+          //     $(elements).last().find('.round-avatar').addClass('round-avatar-border');
+          //   },
+          //   mouseleave: function() {
+          //     $(elements).css('color','#444');
+          //     $(elements).last().find('.round-avatar').removeClass('round-avatar-border');
+              
+               
+          //   }
+          // });
       },
 
       writeUnfollowButton: function(){
@@ -400,7 +420,8 @@ var feedfiction = {
         });
 
         $('input,textarea').live('blur', feedfiction.validateField);
-        $('.story-with-owners .hover-line').live('hover', feedfiction.actions.boldWriterLine);
+        feedfiction.actions.boldWriterLine();
+        
         $('.btn-following').live('hover', feedfiction.actions.writeUnfollowButton);
         $('#imageForStory ul li.story-box').live('click', feedfiction.actions.enableStartStoryForm);
         $(document).on('click', '.btn-file-input' , function(){
