--- a/app/views/layouts/_feed_nav.html.erb
+++ b/app/views/layouts/_feed_nav.html.erb
@@ -5,7 +5,7 @@
 	    <ul class="nav">
 	      <li><%=link_to 'My Feed', root_url if current_user%></li>
 	      <li><%=link_to 'Everything', general_feed_url%></li>
-	      <li><%=link_to 'Popular', '#'%></li>
+	      <!-- <li><%#=link_to 'Popular', '#'%></li> -->
 
 	    </ul>
 	    <% if current_user && current_user.invitation_limit > 0 %>
