--- a/app/views/layouts/_footer_menu.html.erb
+++ b/app/views/layouts/_footer_menu.html.erb
@@ -1,4 +1,4 @@
 <li><%= link_to "Terms",  terms_path %></li>
       <li><%= link_to "Privacy", privacy_path %></li>
       <li><%= link_to "Help", help_path %></li>
-      <li><%= link_to "Contact us", '#' %></li>
+      <li><%= link_to "Contact us", contact_url %></li>
