--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -1,6 +1,6 @@
 <p>You have 2 ways to invite your friends:</p>
 <div class="hr"></div>
-<%=link_to 'Invite facebook friends', '#', id:'facebook_invitation_link'%>
+<%=link_to 'Invite facebook friends', '#', class: 'facebook_invitation_link'%>
 <div class="hr"></div>
 <h4>By Email:</h4>
 <%= render 'form' %>
