--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -60,27 +60,39 @@
 					<!-- start: Contact Form -->
 					<div id="contact-form">
 
-						<form method="post" action="">
-
+						<%= form_for @contact do |f| %>
+					  <% if @contact.errors.any? %>
+					    <div class="error_messages">
+					      <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this message from being saved:</h2>
+					      <ul>
+					      <% @contact.errors.full_messages.each do |msg| %>
+					        <li><%= msg %></li>
+					      <% end %>
+					      </ul>
+					    </div>
+					  <% end %>
+					 
+					
 							<fieldset>
 								<div class="clearfix">
 									<label for="name"><span>Name:</span></label>
 									<div class="input">
-										<input tabindex="1" size="18" id="name" name="name" type="text" value="">
+										<%= f.text_field :name %>
 									</div>
 								</div>
 
 								<div class="clearfix">
 									<label for="email"><span>Email:</span></label>
 									<div class="input">
-										<input tabindex="2" size="25" id="email" name="email" type="text" value="" class="input-xlarge">
+										<%= f.text_field :email , class: 'input-xlarge'%>
 									</div>
 								</div>
 
 								<div class="clearfix">
 									<label for="message"><span>Message:</span></label>
 									<div class="input">
-										<textarea tabindex="3" class="input-xlarge" id="message" name="body" rows="7"></textarea>
+										<%= f.text_area :content, :rows => 7 , class: 'input-xlarge'%>
+										
 									</div>
 								</div>
 
@@ -89,7 +101,8 @@
 								</div>
 							</fieldset>
 
-						</form>
+						<% end %>
+
 
 					</div>
 					<!-- end: Contact Form -->
