--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,10 +6,12 @@
      <!--start: Logo -->
       <div class="logo span3">
         <!-- <i class="mini-white mini-ico-bookmark circle-color-full"></i> -->
-<%= link_to  content_tag(:span ,'Feed') + 'Fiction', root_path, id: "logo" , class: "brand" %>
+<%= link_to  content_tag(:span ,'Feed' ,class: 'logo-feed') + 'Fiction', root_path, id: "logo" , class: "brand" %>
 
         <!-- <a class="brand" href="#">Feed<span>fiction</span></a> -->
+        <span class="label label-info">Alpha</span>
       </div>
+
       <!--end: Logo -->
         
       <!--start: Navigation -->
