--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,15 +1,16 @@
 <h1>Welcome to FeedFiction!</h1>
 <p>Dear <%= @user.name%>,</p>
 <p>
-Thank you for signing up with us and welcome aboard!
-<%= link_to 'Log in', root_url %> to start uploading your photos and writing stories.</p>
+<div>Thank you for signing up with us and welcome aboard./div>
+<div>Please <%= link_to 'Log in', root_url %> to to upload photos and start stories.</div></p>
 <p>
-If you have questions or suggestions, send us a quick note by replying to this email. 
+If you have questions or suggestions, send us a quick note by replying to this email.</p>
+<p> 
 We look forward to reading your stories and hearing your feedback
 </p>
 
-Feed the Fiction!
+<p>Feed the Fiction!</p>
 
-Yours truly, 
-<strong>The FeedFiction Team</strong>
+<p>Yours truly, </p>
+<div><strong>The FeedFiction Team</strong></div>
 
