--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -1,2 +1,42 @@
 <h1>StaticPages#terms</h1>
+
+FeedFiction™  Terms of Use
+
+
+This is the contract between you and FeedFiction when you use FeedFiction's site, services, and products. You should read this carefully before you use FeedFiction. 
+By using the FeedFiction.com website and FeedFiction service (“FeedFiction”) you are agreeing to be bound by the following terms and conditions ("Terms of Use").
+
+Basic terms:
+1. You have to be at least 13 years old to use FeedFiction.
+2. You may not post nude, partially nude, or sexually suggestive photos.
+3. You are responsible for any activity that occurs under your screen name.
+4. You are responsible for keeping your password secure.
+5. You must not abuse, harass, threaten, impersonate or intimidate other FeedFiction users.
+6. You may not use the FeedFiction service for any illegal or unauthorized purpose. International users agree to comply with all local laws regarding online conduct and acceptable content.
+7. You are solely responsible for your conduct and any data, text, information, screen names, graphics, photos, profiles, audio and video clips, links ("Content") that you submit, post, and display on the FeedFiction service.
+8. You must not modify, adapt or hack FeedFiction or modify another website so as to falsely imply that it is associated with FeedFiction.
+9. You must not access FeedFiction's private API by any other means other than the FeedFiction application itself.
+10. You must not crawl, scrape, or otherwise cache any content from FeedFiction including but not limited to user profiles and photos.
+11. You must not create or submit unwanted email or comments to any FeedFiction members ("Spam").
+12. You must not use web URLs in your name without prior written consent from FeedFiction, inc.
+13. You must not transmit any worms or viruses or any code of a destructive nature.
+14. You must not, in the use of FeedFiction, violate any laws in your jurisdiction (including but not limited to copyright laws).
+15. Violation of any of these agreements will result in the termination of your FeedFiction account. While FeedFiction prohibits such conduct and content on its site, you understand and agree that FeedFiction cannot be responsible for the Content posted on its web site and you nonetheless may be exposed to such materials and that you use the FeedFiction service at your own risk.
+FeedFiction Reserve the right:
+16. To modify or terminate the FeedFiction service for any reason, without a prior notice at any time.
+17. To alter these Terms of Use at any time. If the alterations constitute a material change to the Terms of Use, we will notify you via internet mail according to the preference expressed on your account. What constitutes a "material change" will be determined at our sole discretion, in good faith and using common sense and reasonable judgment.
+18. To refuse service to anyone for any reason at any time.
+19. To force forfeiture of any username that becomes inactive, violates trademark, or may mislead other users.
+20. To remove Content and accounts containing Content that we determine in our sole discretion are unlawful, offensive, threatening, libelous, defamatory, obscene or otherwise objectionable or violates any party's intellectual property or these Terms of Use.
+21. To reclaim usernames on behalf of businesses or individuals that hold legal claim or trademark on those usernames.
+
+Proprietary Rights in Content on FeedFiction
+
+22. FeedFiction does NOT claim ANY ownership rights in the text, files, images, photos, video, sounds, musical works, works of authorship, applications, or any other materials (collectively, "Content") that you post on or through the FeedFiction Services. By displaying or publishing ("posting") any Content on or through the FeedFiction Services, you hereby grant to FeedFiction a non-exclusive, fully paid and royalty-free, worldwide, limited license to use, modify, delete from, add to, publicly perform, publicly display, reproduce and translate such Content, including without limitation distributing part or all of the Site in any media formats through any media channels, except Content not shared publicly ("private") will not be distributed outside the FeedFiction Services.
+23. Some of the FeedFiction Services are supported by advertising revenue and may display advertisements and promotions, and you hereby agree that FeedFiction may place such advertising and promotions on the FeedFiction Services or on, about, or in conjunction with your Content. The manner, mode and extent of such advertising and promotions are subject to change without specific notice to you.
+24. You represent and warrant that: (i) you own the Content posted by you on or through the FeedFiction Services or otherwise have the right to grant the license set forth in this section, (ii) the posting and use of your Content on or through the FeedFiction Services does not violate the privacy rights, publicity rights, copyrights, contract rights, intellectual property rights or any other rights of any person, and (iii) the posting of your Content on the Site does not result in a breach of contract between you and a third party. You agree to pay for all royalties, fees, and any other monies owing any person by reason of Content you post on or through the FeedFiction Services.
+25. The FeedFiction Services contain Content of FeedFiction ("FeedFiction Content"). FeedFiction Content is protected by copyright, trademark, patent, trade secret and other laws, and FeedFiction owns and retains all rights in the FeedFiction Content and the FeedFiction Services. FeedFiction hereby grants you a limited, revocable, nonsublicensable license to reproduce and display the FeedFiction Content (excluding any software code) solely for your personal use in connection with viewing the Site and using the FeedFiction Services.
+26. The FeedFiction Services contain Content of Users and other FeedFiction licensors. Except as provided within this Agreement, you may not copy, modify, translate, publish, broadcast, transmit, distribute, perform, display, or sell any Content appearing on or through the FeedFiction Services.
+27. FeedFiction performs technical functions necessary to offer the FeedFiction Services, including but not limited to transcoding and/or reformatting Content to allow its use throughout the FeedFiction Services.
+28. Although the Site and other FeedFiction Services are normally available, there will be occasions when the Site or other FeedFiction Services will be interrupted for scheduled maintenance or upgrades, for emergency repairs, or due to failure of telecommunications links and equipment that are beyond the control of FeedFiction. Also, although FeedFiction will normally only delete Content that violates this Agreement, FeedFiction reserves the right to delete any Content for any reason, without prior notice. Deleted content may be stored by FeedFiction in order to comply with certain legal obligations and is not retrievable without a valid court order. Consequently, FeedFiction encourages you to maintain your own backup of your Content. In other words, FeedFiction is not a backup service. FeedFiction will not be liable to you for any modification, suspension, or discontinuation of the FeedFiction Services, or the loss of any Content.
 <p>Find me in app/views/static_pages/terms.html.erb</p>
