--- a/app/views/static_pages/privacy.html.erb
+++ b/app/views/static_pages/privacy.html.erb
@@ -1,2 +1,62 @@
-<h1>StaticPages#privacy</h1>
-<p>Find me in app/views/static_pages/privacy.html.erb</p>
+<div class="header-hr">
+	<h1>FeedFiction Privacy Policy</h1>
+</div>
+
+<div id="static-page">
+<p>Last updated January 7, 2013</p>
+
+
+<p>Welcome to FeedFiction ("FeedFiction," "we," "us" or "our"). FeedFiction lets you transform your photos into great short stories in a fun, easy and collaborative way. Just upload a photo from your desktop, your Facebook or your Instagram account, and start a short story. You can complete the whole story or compose just a portion, letting other users continue what you’ve started.
+</p>
+<p>Our Privacy Policy explains how we collect, use, share and protect information in relation to web site, and any software provided on or in connection with FeedFiction services (collectively, the <strong>"service"</strong>), and your choices about the collection and use of your information</p>
+<p>At FeedFiction, we collect and manage user data according to the following Privacy Policy. This document is part of FeedFiction's Terms of Use, and by using FeedFiction you agree to the terms of this Privacy Policy and the Terms of Use.</p>
+<p>Please read the <%= link_to 'Terms of Use', terms_url%> in their entirety, and refer to those for definitions and contacts.</p>
+<h3>Data Collected</h3>
+<p>
+We collect anonymous data from every visitor of the Website to monitor traffic and fix bugs. For example, we collect information like web requests, the data sent in response to such requests, the Internet Protocol address, the browser type, the browser language, and a timestamp for the request.</p>
+<p>We ask you to log in and provide certain personal information (such as your Facebook login) in order to be able to save your profile and the accounts, projects, and other data associated with it. 
+</p>
+<p>When you visit the Service, we may use cookies and similar technologies like pixels, web beacons, and local storage to collect information about how you use FeedFiction and provide features and enable more personalized and enhanced experience for you. We may allow third-party advertisers that are presenting advertisements on some of our pages to set and access their cookies on your computer.
+</p>
+<h3>Device identifiers</h3>
+<p>
+When you use a mobile device like a tablet or phone to access FeedFiction, we may access, collect, monitor, store on your device, and/or remotely store one or more "device identifiers." Device identifiers are small data files or similar data structures stored on or associated with your mobile device, which uniquely identify your mobile device. A device identifier may be data stored in connection with the device hardware, data stored in connection with the device's operating system or other software, or data sent to the device by FeedFiction.
+A device identifier may deliver information to us or to a third party partner about how you browse and use the Service and may help us or others provide reports or personalized content and ads. Some features of the Service may not function properly if use or availability of device identifiers is impaired or disabled.</p>
+<h3>Metadata</h3>
+<p>
+Metadata is usually technical data that is associated with User Content. For example, Metadata can describe how, when and by whom a piece of user content was collected and how that content is formatted.
+Users can add or may have Metadata added to their User Content including a hashtag (e.g., to mark keywords when you post a photo), geotag (e.g., to mark your location to a photo), comments or other data. This makes your User Content more searchable by others and more interactive. </p>
+<h3>Use of the Data</h3>
+<p>
+We only use your personal information to provide you the FeedFiction services or to communicate with you about the services or the Website.</p>
+<p>With respect to any data you may upload to FeedFiction (through our API or otherwise), we take the privacy and confidentiality of such data seriously.
+We employ industry standard techniques to protect against unauthorized access of data about you that we store, including personal information.</p>
+
+We do not share personal information you have provided to us without your consent, unless:</p>
+<ul>
+<li>Doing so is appropriate to carry out a user's request;</li>
+<li>We believe it's needed to enforce our Terms of Use, or that is legally required;</li>
+<li>We believe it's needed to detect, prevent or address fraud, security or technical issues;</li>
+<li>Otherwise protect our property, legal rights, or that of others.</li>
+</ul>
+<p>
+
+
+
+<p>FeedFiction may contact you, by email or other means. For example, FeedFiction may send you promotional emails relating to FeedFiction or other third parties FeedFiction feels you would be interested in, or communicate with you about your use of the FeedFiction. </p>
+<h3>Sharing of Data</h3>
+<p>
+We don't sell your personal information to third parties. Aggregated, anonymized data is periodically transmitted to external services to help us improve the FeedFiction Website and service, and in some cases your user identifiers (your username or email address) may be transmitted to external services for the same reason. We currently use Google Analytics (traffic analysis, SEO optimization). We listed below what data these third parties extract exactly. Feel free to check out their own Privacy Policies to find out more.
+Google Analytics: anonymous (ad serving domains, browser type, demographics, language settings, page views, time/date), pseudonymous (IP address)</p>
+<p>We may also use social buttons provided by services like Twitter, Google+, Instagram and Facebook. Your use of these third party services is entirely optional. We are not responsible for the privacy policies and/or practices of these third party services, and you are responsible for reading and understanding those third party services’ privacy policies.</p>
+<p>We may choose to buy or sell assets. In these types of transactions, user information is typically one of the transferred business assets. Moreover, if we, or substantially all of our assets, were acquired, or if we go out of business or enter bankruptcy, user information would be one of the assets that is transferred or acquired by a third party. You acknowledge that such transfers may occur, and that any acquirer of us or our assets may continue to use your personal information as set forth in this policy.
+</p>
+<h3>Children Privacy</h3>
+<p>
+FeedFiction does not knowingly collect or solicit any information from anyone under the age of 13 or knowingly allow such persons to register for the Service. The Service and its content are not directed at children under the age of 13. In the event that we learn that we have collected personal information from a child under age 13 without parental consent, we will delete that information as quickly as possible. If you believe that we might have any information from or about a child under 13, please contact us at support AT FeedFiction.com.</p>
+<h3>Changes to the Privacy Policy</h3>
+<p>
+We may amend this Privacy Policy from time to time. Use of information we collect now is subject to the Privacy Policy in effect at the time such information is used. If we make changes in the way we collect or use information, we will notify you by posting an announcement on the Website or sending you an email. A user is bound by any changes to the Privacy Policy when he or she uses the Services after such changes have been first posted.</p>
+<p>Should you have any question or concern, please write to support AT FeedFiction.com</p>
+</div>
+
