--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,34 +1,7 @@
 <div class="header-hr">
 	<h1>Contact us</h1>
 </div>
-<!-- start: Map -->
-<div class="google-map">
-	<!-- starts: Google Maps -->
 	
-	<div id="googlemaps-container-top"></div>
-	<div id="googlemaps" class="google-map google-map-full"></div>
-	<div id="googlemaps-container-bottom"></div>
-	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	
-	<script type="text/javascript">
-		$('#googlemaps').gMap({
-			maptype: 'ROADMAP',
-			scrollwheel: false,
-			zoom: 13,
-			markers: [
-				{
-					address: 'Zoran, Israel', // Your Adress Here
-					html: '',
-					popup: false,
-				}
-
-			],
-
-		});
-	</script>
-	<!-- end: Google Maps -->
-</div>
-	<!-- end: Map -->	
 
 		
 			<!-- start: Row -->
@@ -37,14 +10,9 @@
 				<div class="span3">
 					<div class="title"><h3>Contact Info</h3></div>
 					<p>
-						<b>FeedFicion </b>
+						<b>FeedFiction</b>
 					</p>
-					<p>
-						P.O.Box 1060
-					</p>
-					<p>	
-						Zoran, Israel , 42823
-					</p>	
+					
 					
 					<p>
 						Email: support AT feedfiction.com
