--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 <%= link_to  content_tag(:span ,'Feed' ,class: 'logo-feed') + 'Fiction', root_path, id: "logo" , class: "brand" %>
 
         <!-- <a class="brand" href="#">Feed<span>fiction</span></a> -->
-        <span class="label label-info">Alpha</span>
+        <span class="label label-info alpha">Alpha</span>
       </div>
 
       <!--end: Logo -->
