--- a/app/views/flags/_create.html.erb
+++ b/app/views/flags/_create.html.erb
@@ -1,4 +1,4 @@
-<div class="alert">
-<button type="button" class="close" data-dismiss="modal">×</button>
-  <strong>This story is flagged by you</strong> We will assit you shortly.
+<a class="close-modal" data-dismiss="modal"></a>
+<div class="modal-header">
+	<h3>Thanks for reporting this story! Our team will review this.</h3>
 </div>
