--- a/app/views/layouts/static_pages.html.erb
+++ b/app/views/layouts/static_pages.html.erb
@@ -30,14 +30,14 @@
       <%= render 'stories/start_story_modal' %>
     
     </div>
-    
+    <%if current_user%>
       <div id="like-modal" class="modal hide fade in"></div>
       
-    <%unless current_user%>
+    <%else%>
       <%= render 'layouts/unregisterd_modals' %>
       
     <%end%>
-    <%= yield :footer %>
+    <%=render 'layouts/footer' %>
   </div>
     <%= debug(params) if Rails.env.development? %>
     <%= render 'layouts/analytics' %>
