--- a/app/views/likes/_like_list.html.erb
+++ b/app/views/likes/_like_list.html.erb
@@ -4,7 +4,7 @@
 	    <h1><%= @story.story_title%></h1>
 	</div>
 	<div class="modal-body">
-		<div>Likes:<%= @story.likes.count%></div>
+		<div><%= pluralize(@story.likes.count, "Like") %></div>
 		<ul class="like-list">
 		<% @story.likes.collect { |f| f.user}.each do |user| %>
 			<%= render user %>
