--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,13 +1,8 @@
-<div class="header-hr">
-	<h1>Contact us</h1>
-</div>
-	
 
-		
 			<!-- start: Row -->
 			<div class="row">
 			<!-- start: Contact Info -->
-				<div class="span3">
+				<!-- <div class="span3">
 					<div class="title"><h3>Contact Info</h3></div>
 					<p>
 						<b>FeedFiction</b>
@@ -18,13 +13,13 @@
 						Email: support AT feedfiction.com
 					</p>
 					
-				</div>
+				</div> -->
 				<!-- end: Contact Info -->		
 
 				<!-- start: Contact Form -->
 				<div class="span4">
-					<div class="title"><h3>Contact Form</h3></div>
-
+					<!-- <div class="title"><h3>Contact Form</h3></div>
+ -->
 					<!-- start: Contact Form -->
 					<div id="contact-form">
 
@@ -92,8 +87,3 @@
 				<!-- end: Social Sites -->
 			
 			</div>
-			<!-- end: Row -->
-<% content_for :footer do %>
-	<%=render 'layouts/footer' %>
-<% end %>
-		
