--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,12 +12,7 @@
 			<div class="row">
 
 				<!-- start: Footer Menu Logo -->
-				<div class="span2">
-					<div class="logo">
-						<%= link_to  content_tag(:span ,'Feed') + 'Fiction', root_path, class: "brand" %>
-
-					</div>
-				</div>
+				<%= render 'layouts/logo_nav' %>
 				<!-- end: Footer Menu Logo -->
 
 				<!-- start: Footer Menu Links-->
@@ -63,7 +58,7 @@
 		
 			<div class="sixteen columns">
 				<p>
-					&copy; 2013, <a href="http://feedfiction.com">FeedFiction</a>
+					&copy; 2013 <a href="http://feedfiction.com">FeedFiction</a>
 				</p>
 			</div>
 	
