--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,8 @@
 <% full_title('About us')%>
 
-<div class="header-hr">
-	<h1>About us</h1>
+<div>
+<p>FeedFiction lets you transform your photos into great short stories in a fun, easy and collaborative way. Just upload a photo from your desktop, your Facebook or your Instagram account, and start a short story. You can complete the whole story or compose just a portion, letting other users continue what you’ve started.
+It’s social photo sharing, the next generation.</p>
+
+<p>For more, check out <%= link_to 'Frequently Asked Questions', help_url%>, <%= link_to 'Terms of Use' ,terms_url %> and <%= link_to 'Privacy Policy' , privacy_url%>.</p>
 </div>
