--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -1,11 +1,4 @@
-<div class="header-hr">
-	<h1>Terms of Use</h1>
-</div>
-
-<div id="static-page">
-<h2>FeedFiction™  Terms of Use</h2>
-
-
+<div>
 <p>
 This is the contract between you and FeedFiction when you use FeedFiction's site, services, applications and products. You should read this carefully before you use FeedFiction. </p>
 <p>
