--- a/app/views/user_mailer/comment_on_story.html.erb
+++ b/app/views/user_mailer/comment_on_story.html.erb
@@ -1,3 +1,5 @@
 <h2>Hi <%= @user.name%></h2>
-<p><%= link_to @current_user.name, user_url(@current_user) %> left a comment on the story <%= link_to @story.story_title ,story_url(@story) %></p>
-<div><%= link_to 'read the comment here' ,story_url(@story) %></div>
+<p><%= link_to @current_user.name, user_url(@current_user) %> left a comment on the story "<%= link_to @story.story_title ,story_url(@story) %>" 
+<%= @story_owner_sentence%>
+</p>
+<div><%= link_to 'Read here' ,story_url(@story) %></div>
