--- a/app/views/user_mailer/continue_story.html.erb
+++ b/app/views/user_mailer/continue_story.html.erb
@@ -1,12 +1,7 @@
 <h2>Hi <%=@user.name%> </h2>
 <p>
-	<%= link_to @current_user.name, user_url(@current_user) %>
-<% if @user.id==@story.user_id %>
-	<%= 'continued your story ' %> 
-<%else%>
-	<%= 'continued the story ' %>
-<%end%>
-
-<%= link_to "#{@story.story_title}, read here" ,story_url(@story) %>
-
+	<%= link_to @current_user.name, user_url(@current_user) %> continued the story 
+	"<%= link_to @story.story_title ,story_url(@story) %>" 
+	<%= @story_owner_sentence%>
 </p>
+<%= link_to "#{@story.story_title}, Read here" ,story_url(@story) %>
