--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,7 +54,7 @@
                     <% else %>
                       <%= render 'layouts/about_dd_menu' %>
                       <li class="divider-vertical"></li>
-                      <li><a href class="sign-in">Sign in with Facebook</a>
+                      <li><a href class="sign-in"><b class="btns fb-icon"></b> Sign in with Facebook</a>
 
                     <% end %>
 
