--- a/app/views/layouts/_logo_nav.html.erb
+++ b/app/views/layouts/_logo_nav.html.erb
@@ -1,10 +1,14 @@
 <!--start: Logo -->
-      <div class="logo span3">
+<div class="span3"><a href="<%= root_url%>" class="logo-image"></a></div>
+
+
+
+      <!-- <div class="logo span3">
         <!-- <i class="mini-white mini-ico-bookmark circle-color-full"></i> -->
-<%= link_to  content_tag(:span ,'Feed' ,class: 'logo-feed') + 'Fiction', root_path, id: "logo" , class: "brand" %>
+<%#= link_to  content_tag(:span ,'Feed' ,class: 'logo-feed') + 'Fiction', root_path, id: "logo" , class: "brand" %>
 
         <!-- <a class="brand" href="#">Feed<span>fiction</span></a> -->
-        <span class="label label-info alpha">Alpha</span>
-      </div>
-
+        <!-- <span class="label label-info alpha">Alpha</span>
+      </div> -->
+ 
       <!--end: Logo -->
