--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -27,6 +27,7 @@ window.fbAsyncInit = ->
     FB.ui
       method: "send"
       name: "Check out Feedficton!"
+      picture: '<%= ENV["ROOT_URL"] %>/assets/logo.png'
       description: "Connect with friends and family to transform your photos into great short stories. Create, Inspire, Share. Have fun. Together."
       link: "http://feedfiction.com"
     false
