--- a/app/views/layouts/_about_dd_menu.html.erb
+++ b/app/views/layouts/_about_dd_menu.html.erb
@@ -1,5 +1,5 @@
 	    <li class="dropdown">
-       	<a data-target="<%= about_url%>" href="<%= about_url%>" data-hover="dropdown" data-delay="1000" data-toggle="dropdown" >
+       	<a href="#" class="dropdown-toggle" data-toggle="dropdown" >
           About <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
