--- a/app/views/user_mailer/continue_story.html.erb
+++ b/app/views/user_mailer/continue_story.html.erb
@@ -4,4 +4,4 @@
 	"<%= link_to @story.story_title ,story_url(@story) %>" 
 	<%= @story_owner_sentence%>
 </p>
-<%= link_to "#{@story.story_title}, Read here" ,story_url(@story) %>
+<%= link_to "Read here" ,story_url(@story) %>
