fix instagram bug

--- a/app/views/flags/_create.html.erb
+++ b/app/views/flags/_create.html.erb
@@ -1,4 +1,4 @@
 <a class="close-modal" data-dismiss="modal"></a>
 <div class="modal-header">
-	<h3>Thanks for reporting this story! Our team will review it.</h3>
+	<h3>Thanks for reporting this story! Our team will review the story and delete it if it violates the Feedfiction <%= link_to 'Terms of Use' , terms_url%></h3>
 </div>
