--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -13,10 +13,13 @@ window.fbAsyncInit = ->
   $('.sign-in').click (e) ->
     e.preventDefault()
     $('#modal-register').modal('hide')
-    $('#loginPreloader').modal('show')
     FB.login (response) ->
       window.location = '/auth/facebook' if response.authResponse
     , scope: "user_photos,friends_photos,email, publish_stream"
+    
+  FB.Event.subscribe "auth.login", (r) ->
+    console.log r.status
+    $("#loginPreloader").modal "show"  if r.status is "connected"
 
   $('#sign_out').click (e) ->
     FB.getLoginStatus (response) ->
