--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,7 +1,7 @@
 <h1>Welcome to FeedFiction!</h1>
 <p>Dear <%= @user.name%>,</p>
 <p>
-<div>Thank you for signing up with us and welcome aboard./div>
+<div>Thank you for signing up with us and welcome aboard.</div>
 <div>Please <%= link_to 'Log in', root_url %> to to upload photos and start stories.</div></p>
 <p>
 If you have questions or suggestions, send us a quick note by replying to this email.</p>
