--- a/app/assets/javascripts/feedfiction.js.erb
+++ b/app/assets/javascripts/feedfiction.js.erb
@@ -284,6 +284,7 @@ var feedfiction = {
         $('#StartStoryModal #start-story').removeAttr('style').hide();
         $('#StartStoryModal #upload-form').removeAttr('style').hide();
         $('#StartStoryModal #uploadProviders').show();
+        $('#StartStoryModal .counter-text').html('55 words left out of 55');
         $('#file-upload-wrapper').show();
       },
 
